@@ -3719,8 +3719,9 @@ MedianCI <- function(x, conf.level=0.95, sides = c("two.sided","left","right"), 
   
   
   sides <- match.arg(sides, choices = c("two.sided","left","right"), several.ok = FALSE)
-  if(sides!="two.sided")
-    conf.level <- 1 - 2*(1-conf.level)
+  
+  # if(sides!="two.sided")
+  #   conf.level <- 1 - 2*(1-conf.level)
 
   # alte Version, ziemlich grosse Unterschiede zu wilcox.test:
   # Bosch: Formelsammlung Statistik (bei Markus Naepflin), S. 95
@@ -3738,13 +3739,17 @@ MedianCI <- function(x, conf.level=0.95, sides = c("two.sided","left","right"), 
             r <- MedianCI_Binom(x, conf.level = conf.level, sides=sides)
           }
           , "boot" = {
-            boot.med <- boot(x, function(x, d) median(x[d], na.rm=na.rm), R=R)
-            r <- boot.ci(boot.med, conf=conf.level, type="basic")[[4]][4:5]
+            if(sides!="two.sided")
+               conf.level <- 1 - 2*(1-conf.level)
+              
+              boot.med <- boot(x, function(x, d) median(x[d], na.rm=na.rm), R=R)
+              r <- boot.ci(boot.med, conf=conf.level, type="basic")[[4]][4:5]
           } )
 
   med <- median(x, na.rm=na.rm)
   if(is.na(med)) {   # do not report a CI if the median is not defined...
     res <- rep(NA, 3)
+    
   } else {
     res <- c(median=med, r)
     # report the conf.level which can deviate from the required one
@@ -3768,48 +3773,64 @@ MedianCI <- function(x, conf.level=0.95, sides = c("two.sided","left","right"), 
 QuantileCI <- function(x, probs=seq(0, 1, .25), conf.level = 0.95, sides = c("two.sided", "left", "right"),
            na.rm = FALSE, method = c("exact", "boot"), R = 999) {
   
-  .QuantileCI <- function(x, probs, conf.level = 0.95, sides = c("two.sided", "left", "right")) {
+  .QuantileCI <- function(x, prob, conf.level = 0.95, sides = c("two.sided", "left", "right")) {
     # Near-symmetric distribution-free confidence interval for a quantile `q`.
   
     # https://stats.stackexchange.com/questions/99829/how-to-obtain-a-confidence-interval-for-a-percentile
-    #
+
     # Search over a small range of upper and lower order statistics for the 
     # closest coverage to 1-alpha (but not less than it, if possible).
     
+    n <- length(x)
     alpha <- 1- conf.level
     
-    n <- length(x)
     
-    u <- qbinom(1-alpha/2, n, probs) + (-2:2) + 1
-    l <- qbinom(alpha/2, n, probs) + (-2:2)
-    u[u > n] <- Inf
-    l[l < 0] <- -Inf
-    
-    if(sides=="two.sided")
-      coverage <- outer(l, u, function(a, b) pbinom(b-1, n, probs) - pbinom(a-1, n, probs))
-    else if(sides=="left")
-      coverage <- outer(l, u, function(a, b) pbinom(b-1, n, probs))
-    else if(sides=="right")
-      coverage <- outer(l, u, function(a, b) 1 - pbinom(a-1, n, probs))
-    
-    if (max(coverage) < 1-alpha) i <- which(coverage==max(coverage)) else
-      i <- which(coverage == min(coverage[coverage >= 1-alpha]))
-    
-    # minimal difference
-    i <- i[1]
-    
-    # order statistics and the actual coverage
-    u <- rep(u, each=5)[i]
-    l <- rep(l, 5)[i]
-    
+    if(sides == "two.sided"){
+
+      u <- qbinom(p = 1-alpha/2, size = n, prob = prob) + (-2:2) + 1
+      l <- qbinom(p = alpha/2, size = n, prob = prob) + (-2:2)
+      
+      u[u > n] <- Inf
+      l[l < 0] <- -Inf
+      
+      coverage <- outer(l, u, function(a,b) pbinom(b-1, n, prob = prob) - pbinom(a-1, n, prob=prob))
+      
+      if (max(coverage) < 1-alpha) i <- which(coverage==max(coverage)) else
+        i <- which(coverage == min(coverage[coverage >= 1-alpha]))
+      
+      # minimal difference
+      i <- i[1]
+      
+      # order statistics and the actual coverage.
+      u <- rep(u, each=5)[i]
+      l <- rep(l, 5)[i]
+      
+      coverage <- coverage[i]
+
+    } else if(sides == "left"){
+      
+      l <- qbinom(p = alpha, size = n, prob = prob)
+      u <- Inf
+      
+      coverage <- 1 - pbinom(q = l-1, size = n, prob = prob)
+
+    } else if(sides == "right"){
+      
+      l <- -Inf
+      u <- qbinom(p = 1-alpha, size = n, prob = prob)
+      
+      coverage <- pbinom(q = u, size = n, prob = prob)
+
+    } 
+
     # get the values  
     if(probs %nin% c(0,1))
-      s <- sort(x, partial=c(u, l))
+      s <- sort(x, partial= c(u, l)[is.finite(c(u, l))])
     else
       s <- sort(x)
     
     res <- c(lwr.ci=s[l], upr.ci=s[u])
-    attr(res, "conf.level") <- coverage[i]
+    attr(res, "conf.level") <- coverage
     
     if(sides=="left")
       res[2] <- Inf
@@ -3826,19 +3847,21 @@ QuantileCI <- function(x, probs=seq(0, 1, .25), conf.level = 0.95, sides = c("tw
     stop("missing values and NaN's not allowed if 'na.rm' is FALSE")
   
   sides <- match.arg(sides, choices = c("two.sided","left","right"), several.ok = FALSE)
-  if(sides!="two.sided")
-    conf.level <- 1 - 2*(1-conf.level)
 
   method <- match.arg(arg=method, choices=c("exact","boot"))
   
   switch( method
           , "exact" = { # this is the SAS-way to do it
-            r <- lapply(probs, function(p) .QuantileCI(x, probs=p, conf.level = conf.level, sides=sides))
+            r <- lapply(probs, function(p) .QuantileCI(x, prob=p, conf.level = conf.level, sides=sides))
             coverage <- sapply(r, function(z) attr(z, "conf.level"))
             r <- do.call(rbind, r)
             attr(r, "conf.level") <- coverage
           }
           , "boot" = {
+            
+            if(sides!="two.sided")
+              conf.level <- 1 - 2*(1-conf.level)
+            
             r <- t(sapply(probs, 
                      function(p) {
                        boot.med <- boot(x, function(x, d) quantile(x[d], probs=p, na.rm=na.rm), R=R)
