@@ -28,7 +28,8 @@ BUGFIXES:
     (Credits to David R. Weise)
   * StrExtractBetween() would have rejected to extract parts between two identical
     characters.
-  * Quantile(), and in consequence Median(), would not have treated missings correctly.  
+  * Quantile(), and in consequence Median(), would not have treated missings correctly.
+  * QuantileCI() will handle multiple probs now.
 
 
 
